# ImagePlotter

./: .gitignore  README.md  comfyui_api.py  edges_to_vec.py  main.py  pyproject.toml  requirements.txt  utils.py
3dmodel/: .gitignore  NutsHolder.step  PenHolder.step  README.md  pen-holder.FCStd
templates/: end.gcode  i2i_face_api.json  start.gcode
