[project]
name = "imageplotter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pathlib>=1.0.1",
    "pyserial>=3.5",
    "tqdm>=4.67.1",
    "urllib3>=2.3.0",
]
